Compis/DecafParser.py
# Generated from Decaf.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class DecafParser ( Parser ):

    grammarFileName = "Decaf.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'{'", "'}'", "';'", "'['", 
                     "']'", "'struct'", "'int'", "'char'", "'boolean'", 
                     "'void'", "'('", "','", "')'", "'='", "'(char)'", "'if'", 
                     "'else'", "'while'", "'return'", "'.'", "'-'", "'!'", 
                     "'*'", "'/'", "'%'", "'+'", "'<'", "'>'", "'<='", "'>='", 
                     "'=='", "'!='", "'&&'", "'||'", "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "Id", "Num", "CharacterLiteral", 
                      "Digit", "Letter", "WS", "COMMENT", "LINE_COMMENT" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_varDeclaration = 2
    RULE_structDeclaration = 3
    RULE_varType = 4
    RULE_methodDeclaration = 5
    RULE_parameter = 6
    RULE_parameterType = 7
    RULE_block = 8
    RULE_statement = 9
    RULE_ifStmt = 10
    RULE_whileStmt = 11
    RULE_returnStmt = 12
    RULE_location = 13
    RULE_expression = 14
    RULE_methodCall = 15
    RULE_arg = 16
    RULE_arith_higher_op = 17
    RULE_arith_op = 18
    RULE_rel_op = 19
    RULE_eq_op = 20
    RULE_cond_op = 21
    RULE_bool_literal = 22

    ruleNames =  [ "program", "declaration", "varDeclaration", "structDeclaration", 
                   "varType", "methodDeclaration", "parameter", "parameterType", 
                   "block", "statement", "ifStmt", "whileStmt", "returnStmt", 
                   "location", "expression", "methodCall", "arg", "arith_higher_op", 
                   "arith_op", "rel_op", "eq_op", "cond_op", "bool_literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    Id=38
    Num=39
    CharacterLiteral=40
    Digit=41
    Letter=42
    WS=43
    COMMENT=44
    LINE_COMMENT=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Id(self):
            return self.getToken(DecafParser.Id, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(DecafParser.DeclarationContext,i)


        def getRuleIndex(self):
            return DecafParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = DecafParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(DecafParser.T__0)
            self.state = 47
            self.match(DecafParser.Id)
            self.state = 48
            self.match(DecafParser.T__1)
            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.T__6) | (1 << DecafParser.T__7) | (1 << DecafParser.T__8) | (1 << DecafParser.T__9) | (1 << DecafParser.T__10))) != 0):
                self.state = 49
                self.declaration()
                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 55
            self.match(DecafParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DecafParser.RULE_declaration

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StructDeclaraContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def structDeclaration(self):
            return self.getTypedRuleContext(DecafParser.StructDeclarationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructDeclara" ):
                listener.enterStructDeclara(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructDeclara" ):
                listener.exitStructDeclara(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructDeclara" ):
                return visitor.visitStructDeclara(self)
            else:
                return visitor.visitChildren(self)


    class MethodDeclaContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def methodDeclaration(self):
            return self.getTypedRuleContext(DecafParser.MethodDeclarationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDecla" ):
                listener.enterMethodDecla(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDecla" ):
                listener.exitMethodDecla(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDecla" ):
                return visitor.visitMethodDecla(self)
            else:
                return visitor.visitChildren(self)


    class VarDeclaContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def varDeclaration(self):
            return self.getTypedRuleContext(DecafParser.VarDeclarationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecla" ):
                listener.enterVarDecla(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecla" ):
                listener.exitVarDecla(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecla" ):
                return visitor.visitVarDecla(self)
            else:
                return visitor.visitChildren(self)



    def declaration(self):

        localctx = DecafParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 60
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = DecafParser.StructDeclaraContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 57
                self.structDeclaration()
                pass

            elif la_ == 2:
                localctx = DecafParser.VarDeclaContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                self.varDeclaration()
                pass

            elif la_ == 3:
                localctx = DecafParser.MethodDeclaContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 59
                self.methodDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DecafParser.RULE_varDeclaration

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ListaContext(VarDeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.VarDeclarationContext
            super().__init__(parser)
            self.vartype = None # VarTypeContext
            self.copyFrom(ctx)

        def Id(self):
            return self.getToken(DecafParser.Id, 0)
        def Num(self):
            return self.getToken(DecafParser.Num, 0)
        def varType(self):
            return self.getTypedRuleContext(DecafParser.VarTypeContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLista" ):
                listener.enterLista(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLista" ):
                listener.exitLista(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLista" ):
                return visitor.visitLista(self)
            else:
                return visitor.visitChildren(self)


    class NormalContext(VarDeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.VarDeclarationContext
            super().__init__(parser)
            self.vartype = None # VarTypeContext
            self.copyFrom(ctx)

        def Id(self):
            return self.getToken(DecafParser.Id, 0)
        def varType(self):
            return self.getTypedRuleContext(DecafParser.VarTypeContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNormal" ):
                listener.enterNormal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNormal" ):
                listener.exitNormal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNormal" ):
                return visitor.visitNormal(self)
            else:
                return visitor.visitChildren(self)



    def varDeclaration(self):

        localctx = DecafParser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDeclaration)
        try:
            self.state = 73
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = DecafParser.NormalContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                localctx.vartype = self.varType()
                self.state = 63
                self.match(DecafParser.Id)
                self.state = 64
                self.match(DecafParser.T__3)
                pass

            elif la_ == 2:
                localctx = DecafParser.ListaContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                localctx.vartype = self.varType()
                self.state = 67
                self.match(DecafParser.Id)
                self.state = 68
                self.match(DecafParser.T__4)
                self.state = 69
                self.match(DecafParser.Num)
                self.state = 70
                self.match(DecafParser.T__5)
                self.state = 71
                self.match(DecafParser.T__3)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Id(self):
            return self.getToken(DecafParser.Id, 0)

        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(DecafParser.VarDeclarationContext,i)


        def getRuleIndex(self):
            return DecafParser.RULE_structDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructDeclaration" ):
                listener.enterStructDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructDeclaration" ):
                listener.exitStructDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructDeclaration" ):
                return visitor.visitStructDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def structDeclaration(self):

        localctx = DecafParser.StructDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_structDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(DecafParser.T__6)
            self.state = 76
            self.match(DecafParser.Id)
            self.state = 77
            self.match(DecafParser.T__1)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.T__6) | (1 << DecafParser.T__7) | (1 << DecafParser.T__8) | (1 << DecafParser.T__9) | (1 << DecafParser.T__10))) != 0):
                self.state = 78
                self.varDeclaration()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 84
            self.match(DecafParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Id(self):
            return self.getToken(DecafParser.Id, 0)

        def structDeclaration(self):
            return self.getTypedRuleContext(DecafParser.StructDeclarationContext,0)


        def getRuleIndex(self):
            return DecafParser.RULE_varType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarType" ):
                listener.enterVarType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarType" ):
                listener.exitVarType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarType" ):
                return visitor.visitVarType(self)
            else:
                return visitor.visitChildren(self)




    def varType(self):

        localctx = DecafParser.VarTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varType)
        try:
            self.state = 93
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.match(DecafParser.T__7)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.match(DecafParser.T__8)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 88
                self.match(DecafParser.T__9)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 89
                self.match(DecafParser.T__6)
                self.state = 90
                self.match(DecafParser.Id)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 91
                self.structDeclaration()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 92
                self.match(DecafParser.T__10)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DecafParser.RULE_methodDeclaration

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class MetoIntContext(MethodDeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.MethodDeclarationContext
            super().__init__(parser)
            self.metoInt = None # Token
            self.copyFrom(ctx)

        def Id(self):
            return self.getToken(DecafParser.Id, 0)
        def block(self):
            return self.getTypedRuleContext(DecafParser.BlockContext,0)

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.ParameterContext)
            else:
                return self.getTypedRuleContext(DecafParser.ParameterContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMetoInt" ):
                listener.enterMetoInt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMetoInt" ):
                listener.exitMetoInt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMetoInt" ):
                return visitor.visitMetoInt(self)
            else:
                return visitor.visitChildren(self)


    class MetoCharContext(MethodDeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.MethodDeclarationContext
            super().__init__(parser)
            self.metoChar = None # Token
            self.copyFrom(ctx)

        def Id(self):
            return self.getToken(DecafParser.Id, 0)
        def block(self):
            return self.getTypedRuleContext(DecafParser.BlockContext,0)

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.ParameterContext)
            else:
                return self.getTypedRuleContext(DecafParser.ParameterContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMetoChar" ):
                listener.enterMetoChar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMetoChar" ):
                listener.exitMetoChar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMetoChar" ):
                return visitor.visitMetoChar(self)
            else:
                return visitor.visitChildren(self)


    class MetoVoidContext(MethodDeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.MethodDeclarationContext
            super().__init__(parser)
            self.metVoid = None # Token
            self.copyFrom(ctx)

        def Id(self):
            return self.getToken(DecafParser.Id, 0)
        def block(self):
            return self.getTypedRuleContext(DecafParser.BlockContext,0)

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.ParameterContext)
            else:
                return self.getTypedRuleContext(DecafParser.ParameterContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMetoVoid" ):
                listener.enterMetoVoid(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMetoVoid" ):
                listener.exitMetoVoid(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMetoVoid" ):
                return visitor.visitMetoVoid(self)
            else:
                return visitor.visitChildren(self)


    class MetoBoolContext(MethodDeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.MethodDeclarationContext
            super().__init__(parser)
            self.metoBool = None # Token
            self.copyFrom(ctx)

        def Id(self):
            return self.getToken(DecafParser.Id, 0)
        def block(self):
            return self.getTypedRuleContext(DecafParser.BlockContext,0)

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.ParameterContext)
            else:
                return self.getTypedRuleContext(DecafParser.ParameterContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMetoBool" ):
                listener.enterMetoBool(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMetoBool" ):
                listener.exitMetoBool(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMetoBool" ):
                return visitor.visitMetoBool(self)
            else:
                return visitor.visitChildren(self)



    def methodDeclaration(self):

        localctx = DecafParser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_methodDeclaration)
        self._la = 0 # Token type
        try:
            self.state = 155
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DecafParser.T__7]:
                localctx = DecafParser.MetoIntContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                localctx.metoInt = self.match(DecafParser.T__7)
                self.state = 96
                self.match(DecafParser.Id)
                self.state = 97
                self.match(DecafParser.T__11)
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.T__7) | (1 << DecafParser.T__8) | (1 << DecafParser.T__9))) != 0):
                    self.state = 98
                    self.parameter()
                    self.state = 103
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==DecafParser.T__12:
                        self.state = 99
                        self.match(DecafParser.T__12)
                        self.state = 100
                        self.parameter()
                        self.state = 105
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 108
                self.match(DecafParser.T__13)
                self.state = 109
                self.block()
                pass
            elif token in [DecafParser.T__8]:
                localctx = DecafParser.MetoCharContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                localctx.metoChar = self.match(DecafParser.T__8)
                self.state = 111
                self.match(DecafParser.Id)
                self.state = 112
                self.match(DecafParser.T__11)
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.T__7) | (1 << DecafParser.T__8) | (1 << DecafParser.T__9))) != 0):
                    self.state = 113
                    self.parameter()
                    self.state = 118
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==DecafParser.T__12:
                        self.state = 114
                        self.match(DecafParser.T__12)
                        self.state = 115
                        self.parameter()
                        self.state = 120
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 123
                self.match(DecafParser.T__13)
                self.state = 124
                self.block()
                pass
            elif token in [DecafParser.T__9]:
                localctx = DecafParser.MetoBoolContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 125
                localctx.metoBool = self.match(DecafParser.T__9)
                self.state = 126
                self.match(DecafParser.Id)
                self.state = 127
                self.match(DecafParser.T__11)
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.T__7) | (1 << DecafParser.T__8) | (1 << DecafParser.T__9))) != 0):
                    self.state = 128
                    self.parameter()
                    self.state = 133
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==DecafParser.T__12:
                        self.state = 129
                        self.match(DecafParser.T__12)
                        self.state = 130
                        self.parameter()
                        self.state = 135
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 138
                self.match(DecafParser.T__13)
                self.state = 139
                self.block()
                pass
            elif token in [DecafParser.T__10]:
                localctx = DecafParser.MetoVoidContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 140
                localctx.metVoid = self.match(DecafParser.T__10)
                self.state = 141
                self.match(DecafParser.Id)
                self.state = 142
                self.match(DecafParser.T__11)
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.T__7) | (1 << DecafParser.T__8) | (1 << DecafParser.T__9))) != 0):
                    self.state = 143
                    self.parameter()
                    self.state = 148
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==DecafParser.T__12:
                        self.state = 144
                        self.match(DecafParser.T__12)
                        self.state = 145
                        self.parameter()
                        self.state = 150
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 153
                self.match(DecafParser.T__13)
                self.state = 154
                self.block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DecafParser.RULE_parameter

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Single_parameterDeclarationContext(ParameterContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.ParameterContext
            super().__init__(parser)
            self.param = None # ParameterTypeContext
            self.copyFrom(ctx)

        def Id(self):
            return self.getToken(DecafParser.Id, 0)
        def parameterType(self):
            return self.getTypedRuleContext(DecafParser.ParameterTypeContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSingle_parameterDeclaration" ):
                listener.enterSingle_parameterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSingle_parameterDeclaration" ):
                listener.exitSingle_parameterDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingle_parameterDeclaration" ):
                return visitor.visitSingle_parameterDeclaration(self)
            else:
                return visitor.visitChildren(self)



    def parameter(self):

        localctx = DecafParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_parameter)
        try:
            localctx = DecafParser.Single_parameterDeclarationContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            localctx.param = self.parameterType()
            self.state = 158
            self.match(DecafParser.Id)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DecafParser.RULE_parameterType

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Int_parameterTypeContext(ParameterTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.ParameterTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInt_parameterType" ):
                listener.enterInt_parameterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInt_parameterType" ):
                listener.exitInt_parameterType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInt_parameterType" ):
                return visitor.visitInt_parameterType(self)
            else:
                return visitor.visitChildren(self)


    class Boolean_parameterTypeContext(ParameterTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.ParameterTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolean_parameterType" ):
                listener.enterBoolean_parameterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolean_parameterType" ):
                listener.exitBoolean_parameterType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolean_parameterType" ):
                return visitor.visitBoolean_parameterType(self)
            else:
                return visitor.visitChildren(self)


    class Char_parameterTypeContext(ParameterTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.ParameterTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

